--- a/转转贪吃蛇/转转贪吃蛇/Resources/Info.plist
+++ b/转转贪吃蛇/转转贪吃蛇/Resources/Info.plist
@@ -30,6 +30,8 @@
 	<dict>
 		<key>accelerometer</key>
 		<true/>
+		<key>gamekit</key>
+		<true/>
 		<key>opengles-2</key>
 		<true/>
 	</dict>
@@ -42,7 +44,6 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
